[DOC] - staging delivery 1 first version + design document final draft

--- a/admin/livrable1/report/documentDesign.tex
+++ b/admin/livrable1/report/documentDesign.tex
@@ -22,9 +22,10 @@
 \chapter*{Comment lancer l'application}
 Afin de lancer l'application, il suffit de suivre les étapes suivantes:
 \begin{enumerate}
-  \item Télécharger le dossier compressé (.zip) sur votre poste de travail
-  \item Décompresser le dossier à un emplacement choisi
-  \item 
+  \item Télécharger le dossier compressé (.zip) sur votre poste de travail.
+  \item Décompresser le dossier vers un emplacement choisi.
+  \item En utilisant un invite de commande, commencer tout d'abord par installer les dépendances au projet avec la commande \texttt{npm install}.
+  \item Une fois le téléchargement terminé, lancer l'application à l'aide de la commande \texttt{npm start}.
 \end{enumerate}
 
 \end{document}
