[feature] #0 - final review design document

--- a/admin/livrable3/report/documentDesign.tex
+++ b/admin/livrable3/report/documentDesign.tex
@@ -51,7 +51,8 @@ Pour voir les pages, il faut d'abord s'inscrire. Le workflow est naturel depuis 
   \item[\texttt{\slash{}playlists\slash{}:id}] Page d'une playlist et la liste des chansons qu'elle contient. Possibilité de supprimer une chanson.
   \item[\texttt{\slash{}users}] Page de recherche par usager.
   \item[\texttt{\slash{}account}] Page de l'utilisateur courant, excepté s'il y a des query params dans l'URL où à ce moment c'est un autre utilisateur qui est visité depuis la recherche d'utilisateurs. La fonctionnalité Gravatar est faite sur cette même page. Il faut s'inscrire avec le même email sur gravatar.
-  \item[\texttt{\slash{}logout}] Déconnexion de l'usager.
+  \item[\texttt{\slash{}signup}] Création d'un nouvel usager.  \item[\texttt{\slash{}login}] Connexion de l'usager.  \item[\texttt{\slash{}logout}] Déconnexion de l'usager.
+  \item[\texttt{\slash{}news}] Page de nouvelles courantes sur l'industrie de la musique. Essayer d'utiliser les onglets pour raffiner les résultats selon vos préférences!
 \end{description}
 
 Pour plus d'informations, voir directement le router dans \texttt{index.js}.
